--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -54,13 +54,13 @@
 
       <div class="bground">
         <div class="content">
-          <span class="close"></span>
+          <span onclick="closeModal();" class="close"></span>
           <div class="modal-body">
             <form
               name="reserve"
               action="index.html"
               method="get"
-              onsubmit="return validate();"
+              onsubmit="validate();"
             >
               <div
                 class="formData">
