--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -17,7 +17,6 @@
       <img alt="logo" src="Logo.png" width="auto" height="auto" />
     </div>
     <div class="main-navbar">
-      
       <a href="#" class="active"><span>Accueil</span></a>
       <a href="#"><span>Détails de l'évènement</span></a>
       <a href="#"><span>À propos</span></a>
@@ -51,20 +50,24 @@
           je m'inscris
         </button>
       </div>
-
       <div class="bground">
         <div class="content">
           <span class="close"></span>
           <div class="modal-body">
+            <div id="confirmation">
+              <h1>Merci d'avoir soumis vos données d'inscription</h1>
+              <button class="btn-close">Fermer</button>
+            </div>
             <form
+              id="form"
               name="reserve"
               action="index.html"
               method="get"
-              onsubmit="return validate();"
+              onsubmit="validate();"
             >
               <div
                 class="formData">
-                <label>Prénom</label><br>
+                <label for="first" >Prénom</label><br>
                 <input
                   class="text-control"
                   type="text"
@@ -73,19 +76,22 @@
                   minlength="2"
                 /><br>
               </div>
+              <div id="error-first-name"></div>
               <div
                 class="formData">
-                <label>Nom</label><br>
+                <label for="last" >Nom</label><br>
                 <input
                   class="text-control"
                   type="text"
                   id="last"
                   name="last"
+                  minlength="2"
                 /><br>
               </div>
+              <div id="error-last-name"></div>
               <div
                 class="formData">
-                <label>E-mail</label><br>
+                <label for="email" >E-mail</label><br>
                 <input
                   class="text-control"
                   type="email"
@@ -93,9 +99,10 @@
                   name="email"
                 /><br>
               </div>
+              <div id="error-mail"></div>
               <div
                 class="formData">
-                <label>Date de naissance</label><br>
+                <label for="birthdate" >Date de naissance</label><br>
                 <input
                   class="text-control"
                   type="date"
@@ -103,12 +110,14 @@
                   name="birthdate"
                 /><br>
               </div>
+              <div id="error-birth-date"></div>
               <div
                 class="formData">
-                <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+                <label for="quantity" >À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
               </div>
-              <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
+              <div id="error-quantity"></div>
+              <p class="text-label">Quelles villes ?</p>
               <div
                 class="formData">
                 <input
@@ -178,7 +187,7 @@
                   Portland</label
                 >
               </div>
-
+              <div id="error-location"></div>
               <div
                 class="formData">
                 <input
@@ -192,13 +201,18 @@
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
                 <br>
-                <input class="checkbox-input" type="checkbox" id="checkbox2" />
+                <input 
+                class="checkbox-input" 
+                type="checkbox" 
+                id="checkbox2" 
+                />
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
-                  Je Je souhaite être prévenu des prochains évènements.
+                  Je souhaite être prévenu des prochains évènements.
                 </label>
                 <br>
               </div>
+              <div id="error-validation"></div>
               <input
                 class="btn-submit"
                 type="submit"
@@ -212,7 +226,7 @@
     </main>
     <footer>
       <p class="copyrights">
-        Copyright 2014 - 2022, GameOn Inc.
+        Copyright 2014 - 2020, GameOn Inc.
       </p>
     </footer>
     <script src="modal.js"></script>
